# requiem

./: .gitignore  Cargo.toml  README.md  flake.nix  sabi.pest  shell.nix
.github/workflows/: rust.yml
assets/acts/: 1.sabi  2.sabi
assets/characters/Haruna/: character.json
assets/characters/Kiyomi/: character.json
assets/characters/Libitina/: character.json
assets/characters/Nayu/: character.json
assets/scripts/: entry.sabi  entry.txt  scene1.txt  script.txt
src/: main.rs
src/background/: controller.rs  mod.rs
src/character/: character_operations.rs  controller.rs  mod.rs
src/chat/: controller.rs  mod.rs  ui_provider.rs
src/compiler/: ast.rs  calling.rs  controller.rs  mod.rs
src/ettethread_ai/: mod.rs
src/ettethread_compiler/: mod.rs
src/intelligence/: mod.rs
