[package]
name = "requiem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
json = "0.12.4"
regex = "1.8.4"
serde = { version="1.0.164", features = ["derive"] }
serde_json = "1.0.99"
ureq = { version="2.7.1", features = ["json"] }